# Qt_Opencv_Demo

./: README.md
Qt_Opencv_demo/: CMakeLists.txt
Qt_Opencv_demo/include/: VideoWidget.h
Qt_Opencv_demo/src/: VideoWidget.cpp  main.cpp
Qt_Opencv_demo/ui/: VideoWidget.ui
